--- a/index.html
+++ b/index.html
@@ -25,11 +25,25 @@
 
         <div class="labelsInputFuerza labelsGeneral" id="labelsInputFuerza">
             <h3 class="descripcionFuerza descripcionGeneral">Los golpes y/o patadas dados con fuerza son multiplicados x2. El calculo se realiza restando la fuerza del golpe a la fuerza tuya, posteriormente añadiendo la multiplicacion para definir cuanto daño te realizo.</h3>
-            <!-- <label class="labelFuerza label1" for="inputFuerza">Coloque la fuerza del ataque recibido</label> -->
             <input class="inputFuerza input1" placeholder="Coloca la fuerza del ataque recibido" type="text" id="inputFuerza">
-            <!-- <label class="labelRecepter label2" for="inputReceptor">Coloca tu fuerza</label> -->
             <input class="inputRecepter input2" placeholder="Coloca la fuerza de tu personaje" type="text" id="inputReceptor">
             <input class="submitFuerza submitGeneral" id="calcularTotalFuerza" type="submit" value="Calcular">
+            <div class="boxRadios">
+                <p>Con la nueva actualización en Shinobi, ahora el cálculo de la fuerza cambia. Si tu porcentaje de maestría de Taijutsu es mayor a 50%, el daño es x1.5 y si tienes más del 90%, el daño será por 1.25. </p>
+            </div>
+            <div class="radiosFuerza">
+
+                <input class="radioFuerzaNormal" type="radio" name="fuerza" id="radioFuerzaNormal">
+                <label for="radioFuerzaNormal">Normal</label>
+                <input class="radioFuerza1.5" type="radio" name="fuerza" id="radioFuerza1.5">
+                <label for="radioFuerza1.5">Taijutsu 50%</label>
+                <input class="radioFuerza1.25" type="radio" name="fuerza" id="radioFuerza1.25">
+                <label for="radioFuerza1.25">Taijutsu 90%</label>
+            </div>
+            
+
+
+
             <h3 class="resultadoFuerza resultadoGeneral" id="resultadoFuerza"></h3>
             <div class="buttonVolver" id="volver" href="">
                 Volver
@@ -42,11 +56,14 @@
             <input class="inputTecnica input1" type="text" id="inputTecnica">
             <label class="labelReceptorTecnica label2" for="inputReceptorTecnica">Coloca tu chakra restante</label>
             <input class="inputReceptorTecnica input2" type="text" id="inputReceptorTecnica">
+            <div class="seccionFinal">
             <input class="submitTecnica resultadoGeneral" id="calcularTotalTecnica" type="submit" value="Calcular">
-            <h3 class="resultadoTecnica resultadoGeneral" id="resultadoTecnica"></h3>
             <div class="buttonVolver buttonVolverTecnica" id="volverTecnica" href="">
                 Volver
             </div>
+
+            <h3 class="resultadoTecnica resultadoGeneral" id="resultadoTecnica"></h3>
+
         </div>
         </div>
 
