--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <input class="inputFuerza input1" placeholder="Coloca la fuerza del ataque recibido" type="text" id="inputFuerza">
             <input class="inputRecepter input2" placeholder="Coloca la fuerza de tu personaje" type="text" id="inputReceptor">
             <input class="submitFuerza submitGeneral" id="calcularTotalFuerza" type="submit" value="Calcular">
+            <input id="buttonRecuperar" title="Reutiliza los datos usados en tu anterior uso de la plataforma." class="buttonRecuperarGeneral" type="button" value="Reusar Datos">
             <div class="boxRadios boxRadiosFuerza">
                 <p>Con la nueva actualización en Shinobi, ahora el cálculo de la fuerza cambia. Si tu porcentaje de maestría de Taijutsu es mayor a 50%, el daño es x1.5 y si tienes más del 90%, el daño será por 1.25. </p>
             </div>
@@ -54,6 +55,7 @@
             <input class="inputReceptorTecnica input2" placeholder="Coloca tu chakra restante" type="text" id="inputReceptorTecnica">
             <div class="seccionFinal">
             <input class="submitTecnica submitGeneral" id="calcularTotalTecnica" type="submit" value="Calcular">
+            <input id="buttonRecuperarChakra" title="Reutiliza los datos usados en tu anterior uso de la plataforma." class="buttonRecuperarGeneral buttonRecuprarChakra" type="button" value="Reusar Datos">
             <div class="boxRadios boxRadiosChakra">
                 <p>Ten en cuenta las variables de daño. Si alguien te ataca con una técnica con Senjutsu, coloca la cifra del ataque sin el buffo, así la calculadora suma de manera correcta. Ten en cuenta si bloqueas el ataque de igual manera.</p>
             </div>
@@ -75,18 +77,7 @@
 
         </div>
         </div>
-
-
-
-
     </div>
-
-
-    <!-- 
-    <div class="cuadroInputs">
-
-    </div> -->
-
 
 
 
