--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div class="buttonResistenciaTotal" id="resistenciaChakra" href="">
             Resistencia de Chakra
         </div>
+        <a href="./charts.html" class="respaldarFichaButton" id="respaldarFichaButton">Fichas (WIP - No tocar)</a>
+
+
+
 
         <!--  -->
         <!--  -->
@@ -48,9 +52,6 @@
                 Volver
             </div>
         </div>
-
-
-
 
 
 
@@ -126,6 +127,7 @@
 
 
 
-    <script src="./main.js"></script>
+
 </body>
+<script src="./main.js"></script>
 </html>
