--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     
-
+    <button class="catbutton" id="catbutton">Presiona para un gato</button>
+    <img src="" alt="Imagen de Gato" id="catimage">
+    
     <img class="tituloImg" src="./img/calculadora.png" alt="">
 
 
